manifests/default/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v2.4.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: storage
              mountPath: /app/config
              subPath: homepage/config
          resources:
            limits:
              cpu: "1"
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: default-storage
