manifests/default/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.scheme: http
spec:
  tls:
    - hosts:
        - homepage.tanksrop.xyz
      secretName: tanksrop.xyz
  rules:
  - host: homepage.tanksrop.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 80
